# Brainfuck

./: .gitignore  CMakeLists.txt  README.md  brainfuckInterpreter  brainfuckInterpreter.c  brainfuckInterpreter.h  build.sh  constants.h.in  test.bf
src/: CMakeLists.txt  brainfuckInterpreter.c  brainfuckInterpreter.h  constants.h  main.c
src/Interpreter/: CMakeLists.txt  brainfuckDebugUtil.c  brainfuckDebugUtil.h  brainfuckInterpreter.c  brainfuckInterpreter.h
src/Util/: CMakeLists.txt  util.c  util.h
